adicionada a aba de projetos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <img src="src/imagens/sobre.gif" alt="ícone sobre mim">
                 </li>
 
+                <li class="aba" id="meus-projetos">
+                    <img src="src/imagens/projetos.gif" alt="ícone projetos">
+                </li>
+
                 <li class="aba" id="minhas-redes">
                     <img src="src/imagens/coracao.gif" alt="ícone redes sociais">
                 </li>
@@ -46,8 +50,58 @@
                     <div class="descricao">
                         <p>Oi! Meu nome é Flávia Figueredo, seja bem-vindo(a)!</p>
 
-                        <p>Sou uma pessoa apaixonada pela tecnologia desde muito nova. Sou formada em Produção Audiovisual, mas sempre tive o sonho de trabalhar com programação e atualmente comecei a colocar esse sonho em prática estudando <span>HTML, CSS e JavaScript.</span> <br> Gosto muito de café, e meus principais hobbies são caminhar com o meu cachorro, assistir filmes e séries.</p>
+                        <p>Sou uma pessoa apaixonada pela tecnologia desde muito nova. Sou formada em Produção
+                            Audiovisual, mas sempre tive o sonho de trabalhar com programação e atualmente comecei a
+                            colocar esse sonho em prática estudando <span>HTML, CSS e JavaScript.</span> <br> Gosto
+                            muito de café, e meus principais hobbies são caminhar com o meu cachorro, assistir filmes e
+                            séries.</p>
                     </div>
+                </div>
+
+                <div class="informacao" id="informacao-meus-projetos">
+                    <h3 class="sub-titulo">Meus projetos</h3>
+
+                    <ul class="projetos">
+                        <li class="projeto">
+                            <h4>Pokédex com React</h4>
+                            <img class="gif" src="src/imagens/pokedex-react.gif" alt="Gif da Pokédex">
+
+                            <div class="links-projeto">
+                                <a href="https://pokedex-quest-react-avancado.vercel.app/" target="_blank">Veja o
+                                    projeto aqui.</a>
+
+                                <a href="https://github.com/flaviafigueredo/pokedex-quest-react-avancado"
+                                    target="_blank">Veja o repositório aqui.</a>
+                            </div>
+                        </li>
+
+                        <li class="projeto">
+                            <h4>Projeto GitHub API</h4>
+                            <img class="gif" src="src/imagens/projeto-github-api.gif" alt="Gif do Projeto GitHub API">
+
+                            <div class="links-projeto">
+                                <a href="https://flaviafigueredo.github.io/projeto-github-api/" target="_blank">Veja o
+                                    projeto aqui.</a>
+
+                                <a href="https://github.com/flaviafigueredo/projeto-github-api" target="_blank">Veja o
+                                    repositório aqui.</a>
+                            </div>
+                        </li>
+
+                        <li class="projeto">
+                            <h4>Gerador de conselhos</h4>
+                            <img class="gif" src="src/imagens/advice-generator-app.gif"
+                                alt="Gif do Gerador de conselhos">
+
+                            <div class="links-projeto">
+                                <a href="https://flaviafigueredo.github.io/advice-generator-app/" target="_blank">Veja o
+                                    projeto aqui.</a>
+
+                                <a href="https://github.com/flaviafigueredo/advice-generator-app" target="_blank">Veja o
+                                    repositório aqui.</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="informacao" id="informacao-minhas-redes">
@@ -55,7 +109,7 @@
 
                     <ul class="redes-sociais">
                         <li>
-                            <a href="https://drive.google.com/file/d/1X8WonkzehvuyMm_jKuzYPflAZEkMdwPw/view?usp=sharing"
+                            <a href="src/arquivos/curriculo dev frontend.pdf"
                                 target="_blank" class="curriculo">Currículo</a>
                         </li>
                         <li>
@@ -75,7 +129,8 @@
 
     <div class="icon">
         <p>
-            <a target="_blank" href="https://icons8.com/icon/48250/código">Favicon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
+            <a target="_blank" href="https://icons8.com/icon/48250/código">Favicon</a> by <a target="_blank"
+                href="https://icons8.com">Icons8</a>
         </p>
     </div>
     <script src="src/js/index.js"></script>
