atualizado o texto sobre mim

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
                     <div class="descricao">
                         <p>Oi! Meu nome é Flávia Figueredo, seja bem-vindo(a)!</p>
 
-                        <p>Sou uma pessoa apaixonada pela tecnologia desde muito nova. Sou formada em Produção
-                            Audiovisual, mas sempre tive o sonho de trabalhar com programação e atualmente comecei a
-                            colocar esse sonho em prática estudando <span>HTML, CSS e JavaScript.</span> <br> Gosto
-                            muito de café, e meus principais hobbies são caminhar com o meu cachorro, assistir filmes e
-                            séries.</p>
+                        <p>
+                            Desde muito jovem, nutro uma paixão pela tecnologia. Sou formada em Produção Audiovisual,
+                            mas sempre sonhei em trabalhar com programação. Decidi transformar esse sonho em realidade,
+                            dedicando-me ao estudo de <span>HTML, CSS, JavaScript e React.</span> Além disso, concluí
+                            uma Pós-graduação em Desenvolvimento Full Stack e atualmente estou cursando uma
+                            Pós-graduação em Engenharia de Software. Meu objetivo é iniciar minha carreira como Front
+                            End Developer. <br> Sou uma entusiasta do café e, nos meus momentos de lazer, desfruto de
+                            atividades como caminhar com meu cachorro, ler e assistir filmes e séries.
+                        </p>
                     </div>
                 </div>
 
@@ -109,8 +113,8 @@
 
                     <ul class="redes-sociais">
                         <li>
-                            <a href="src/arquivos/curriculo dev frontend.pdf"
-                                target="_blank" class="curriculo">Currículo</a>
+                            <a href="src/arquivos/curriculo dev frontend.pdf" target="_blank"
+                                class="curriculo">Currículo</a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/flaviafigueredo/" target="_blank"
